Throwed over the whole permission-stuff; we will do it later via unix-file-permissions. but we keep the app-db (in user-space only) for a unified help-system, listing apps, apropos etc.

--- a/services/Makefile
+++ b/services/Makefile
@@ -7,7 +7,7 @@ SERVICES = services.txt
 
 all:	$(SERVICES)
 		@for i in $(DIRS) ; do \
-			$(MAKE) -C $$i all || { echo "Make: Error (`pwd`)"; exit 1; } ; \
+			$(MAKE) -s --no-print-directory -C $$i all || { echo "Make: Error (`pwd`)"; exit 1; } ; \
 		done;
 
 $(SERVICES):
@@ -15,5 +15,5 @@ $(SERVICES):
 
 clean:
 		@for i in $(DIRS) ; do \
-			$(MAKE) -C $$i clean || { echo "Make: Error (`pwd`)"; exit 1; } ; \
+			$(MAKE) -s --no-print-directory -C $$i clean || { echo "Make: Error (`pwd`)"; exit 1; } ; \
 		done
