--- a/kernel/src/Makefile
+++ b/kernel/src/Makefile
@@ -1,38 +1,39 @@
 # general
-ROOT=../..
-BUILD=$(ROOT)/build
-BUILDK=$(BUILD)/kernel/src
-BIN=$(BUILD)/kernel.bin
-LDCONF=../ld.conf
-LIB=$(ROOT)/lib
+ROOT = ../..
+BUILD = $(ROOT)/build
+BUILDK = $(BUILD)/kernel/src
+BIN = $(BUILD)/kernel.bin
+LDCONF = ../ld.conf
+LIB = $(ROOT)/lib
 GCCLIBDIR = $(ROOT)/libgcc
-SUBDIRS=. $(filter-out Makefile $(wildcard *.*),$(wildcard *))
-BUILDDIRS=$(addprefix $(BUILDK)/,$(SUBDIRS))
-DEPS=$(shell find $(BUILDDIRS) -mindepth 0 -maxdepth 1 -name "*.d")
+SUBDIRS = . $(filter-out Makefile $(wildcard *.*),$(wildcard *))
+LSUBDIRS = $(filter-out $(wildcard $(LIB)/src/*.*),$(wildcard $(LIB)/src/*))
+BUILDDIRS = $(addprefix $(BUILDK)/,$(SUBDIRS)) $(patsubst $(LIB)/%,$(BUILDK)/lib/%,$(LSUBDIRS))
+DEPS = $(shell find $(BUILDDIRS) -mindepth 0 -maxdepth 1 -name "*.d")
 
 CC = gcc
 CFLAGS = -ffreestanding -nostdlib -nostartfiles -nodefaultlibs $(CDEFFLAGS) \
 	-D IN_KERNEL=1 -I../h -I$(LIB)/h
 
 # sources
-ASRC=../kernel.asm
-CSRC=$(shell find $(SUBDIRS) -mindepth 0 -maxdepth 1 -name "*.c")
-LSRC=$(wildcard $(LIB)/src/*.c)
+ASRC = ../kernel.asm
+CSRC = $(shell find $(SUBDIRS) -mindepth 0 -maxdepth 1 -name "*.c")
+LSRC = $(shell find $(LIB)/src -name "*.c")
 
 # objects
-AOBJ=$(BUILDK)/kernela.o
-COBJ=$(patsubst %.c,$(BUILDK)/%.o,$(CSRC))
-LOBJ=$(patsubst $(LIB)/src/%.c,$(BUILDK)/lib_%.o,$(LSRC))
+AOBJ = $(BUILDK)/kernela.o
+COBJ = $(patsubst %.c,$(BUILDK)/%.o,$(CSRC))
+LOBJ = $(patsubst $(LIB)/%.c,$(BUILDK)/lib/%.o,$(LSRC))
 # for long long arithmetic
 GCCLIB = $(GCCLIBDIR)/_divdi3.object \
 	$(GCCLIBDIR)/_moddi3.object \
 	$(GCCLIBDIR)/_udivdi3.object \
 	$(GCCLIBDIR)/_umoddi3.object
 
-SYMBOLS=$(BUILD)/kernel_symbols.txt
-SYMBOLSCRIPT=$(ROOT)/tools/gensymbols.sh
-SYMBOLSRC=ksymbols.c
-SYMBOLOBJ=$(patsubst %.c,$(BUILDK)/%.o,$(SYMBOLSRC))
+SYMBOLS = $(BUILD)/kernel_symbols.txt
+SYMBOLSCRIPT = $(ROOT)/tools/gensymbols.sh
+SYMBOLSRC = ksymbols.c
+SYMBOLOBJ = $(patsubst %.c,$(BUILDK)/%.o,$(SYMBOLSRC))
 
 .PHONY: all pre clean
 
@@ -75,7 +76,7 @@ $(BUILDK)/%.o:		%.c
 		@echo "	" CC $<
 		@$(CC) $(CFLAGS) -o $@ -c $< -MMD
 
-$(BUILDK)/lib_%.o:	$(LIB)/src/%.c
+$(BUILDK)/lib/%.o:	$(LIB)/%.c
 		@echo "	" CC $<
 		@$(CC) $(CFLAGS) -o $@ -c $< -MMD
 
