--- a/tools/dump/Makefile
+++ b/tools/dump/Makefile
@@ -4,13 +4,13 @@ BUILDL = $(BUILD)/tools/$(NAME)
 BIN = $(BUILD)/$(NAME)
 SUBDIRS = . $(filter-out Makefile $(wildcard *.*),$(wildcard *))
 BUILDDIRS = $(addprefix $(BUILDL)/,$(SUBDIRS))
-DEPS = $(shell find $(BUILDDIRS) -mindepth 0 -maxdepth 1 -name "*.d")
+DEPS = $(shell find $(BUILDDIRS) -name "*.d")
 
 CC = g++
 CFLAGS = $(CPPDEFFLAGS)
 
 # sources
-CSRC = $(shell find $(SUBDIRS) -mindepth 0 -maxdepth 1 -name "*.cpp")
+CSRC = $(shell find $(SUBDIRS) -name "*.cpp")
 
 # objects
 COBJ = $(patsubst %.cpp,$(BUILDL)/%.o,$(CSRC))
