--- a/libc/Makefile
+++ b/libc/Makefile
@@ -2,7 +2,7 @@ BUILD = ../build
 BUILDL = $(BUILD)/libc
 LIBDIR = ../lib
 GCCLIBDIR = ../libgcc
-SUBDIRS = src $(filter-out $(wildcard src/*.*),$(wildcard src/*))
+SUBDIRS = $(filter-out $(shell find src -name "*.*"),$(shell find src -name "*"))
 LSUBDIRS = $(filter-out $(wildcard $(LIBDIR)/src/*.*),$(wildcard $(LIBDIR)/src/*))
 BUILDDIRS = $(addprefix $(BUILDL)/,$(SUBDIRS)) $(patsubst $(LIBDIR)/%,$(BUILDL)/lib/%,$(LSUBDIRS))
 DEPS = $(shell find $(BUILDDIRS) -name "*.d")
