--- a/bochs.cfg
+++ b/bochs.cfg
@@ -11,8 +11,8 @@ floppya: 1_44="build/disk.img", status=inserted
 ata0: enabled=1, ioaddr1=0x1f0, ioaddr2=0x3f0, irq=14
 ata0-master: type=disk, path=build/hd.img, mode=flat, cylinders=100, heads=16, spt=63, translation=none
 #ata0-slave: type=disk, path=build/hd.img, mode=flat, cylinders=100, heads=16, spt=63, translation=none
-ata0-slave: type=cdrom, path=mos.iso, status=inserted
-ata1: enabled=0#1, ioaddr1=0x170, ioaddr2=0x370, irq=15
+ata1: enabled=1, ioaddr1=0x170, ioaddr2=0x370, irq=15
+ata1-master: type=cdrom, path=mos.iso, status=inserted
 ata2: enabled=0
 ata3: enabled=0
 port_e9_hack: enabled=1
