Fixed ld-problem with section .note.gnu.build-id. And moved the io-port-stuff to the assembly file (no inline-asm anymore)

--- a/user/c/initloader/Makefile
+++ b/user/c/initloader/Makefile
@@ -11,7 +11,7 @@ BUILDDIRS = $(addprefix $(BUILDL)/,$(SUBDIRS))
 DEPS = $(shell find $(BUILDDIRS) -mindepth 0 -maxdepth 1 -name "*.d")
 
 CC = gcc
-CFLAGS = -nostdlib -nostartfiles -nodefaultlibs -Wl,-T,$(LDCONF) $(CDEFFLAGS) \
+CFLAGS = -nostdlib -nostartfiles -nodefaultlibs -Wl,-T,$(LDCONF) -Wl,--build-id=none $(CDEFFLAGS) \
 	-I$(ROOT)/lib/h -I$(LIBC)/include
 
 # sources
