Working on the shell-script-language :) Now we can print the AST and execute it partly (at least expression-evaluation and variable-assignment) ^^

--- a/user/c/shscr/Makefile
+++ b/user/c/shscr/Makefile
@@ -57,7 +57,7 @@ $(BUILDDIRS):
 
 $(BUILDL)/%.o:		%.c
 		@echo "	" CC $<
-		@$(CC) $(CFLAGS) -o $@ -c $< -MMD
+		@$(CC) $(CFLAGS) -D YYERROR_VERBOSE -o $@ -c $< -MMD
 
 -include $(DEPS)
 
