Working on shell-script-language: Now we can execute most of the stuff (ok, commands are *really* not finished yet ;))

--- a/user/c/shscr/Makefile
+++ b/user/c/shscr/Makefile
@@ -30,6 +30,10 @@ START = $(BUILD)/libc_startup.o
 COBJ = $(patsubst %.c,$(BUILDL)/%.o,$(CSRC))
 GENOBJ = $(patsubst %.c,$(BUILDL)/%.o,$(LEXGEN) $(BISONGEN))
 
+# the shell-lib
+ADDLIBS = ../../../build/user_libs_shell.a
+ADDFLAGS = -I../../libs
+
 .PHONY: all clean
 
 all:	$(APPCPY) $(BISONGEN) $(LEXGEN) $(BIN)
