Introduced a debug- and release-version (parallel), so that we don't have to recompile everything as soon as we want to switch between these two.

--- a/user/c/shell/Makefile
+++ b/user/c/shell/Makefile
@@ -1,5 +1,5 @@
 NAME = shell
-ADDLIBS = ../../../build/user_libs_shell.a
+ADDLIBS = $(BUILD)/user_libs_shell.a
 ADDFLAGS = -I../../libs
 
 -include ../DefMakefile.mk
