--- a/user/cpp/guishell/Makefile
+++ b/user/cpp/guishell/Makefile
@@ -1,5 +1,5 @@
 NAME = guishell
-ADDLIBS = ../../../build/user_libs_shell.a
+ADDLIBS = $(BUILD)/user_libs_shell.a
 ADDFLAGS = -I../../libs
 
 -include ../DefMakefile.mk
