--- a/bochs.cfg
+++ b/bochs.cfg
@@ -6,11 +6,11 @@ megs: 64
 romimage: file="/usr/local/share/bochs/BIOS-bochs-latest", address=0x00000
 vgaromimage: file="/usr/share/vgabios/vgabios.bin"
 boot: disk
-floppya: 1_44="build/disk.img", status=inserted
+floppya: 1_44="build/debug/disk.img", status=inserted
 # no floppyb
 ata0: enabled=1, ioaddr1=0x1f0, ioaddr2=0x3f0, irq=14
-ata0-master: type=disk, path=build/hd.img, mode=flat, cylinders=100, heads=16, spt=63, translation=none
-#ata0-slave: type=disk, path=build/hd.img, mode=flat, cylinders=100, heads=16, spt=63, translation=none
+ata0-master: type=disk, path=build/release/hd.img, mode=flat, cylinders=100, heads=16, spt=63, translation=none
+#ata0-slave: type=disk, path=build/debug/hd.img, mode=flat, cylinders=100, heads=16, spt=63, translation=none
 ata1: enabled=1, ioaddr1=0x170, ioaddr2=0x370, irq=15
 ata1-master: type=cdrom, path=mos.iso, status=inserted
 ata2: enabled=0
