Display of the guishell seems to work fine now :)

--- a/user/cpp/guishell/Makefile
+++ b/user/cpp/guishell/Makefile
@@ -1,5 +1,5 @@
 NAME = guishell
-ADDLIBS = $(BUILD)/user_libs_shell.a
+ADDLIBS = $(BUILD)/user_libs_shell.a $(BUILD)/user_libs_vterm.a
 ADDFLAGS = -I../../libs
 
 -include ../DefMakefile.mk
