Added the system-call getConf to get configuration-values from the kernel (e.g. timer-frequency)

--- a/bochs.cfg
+++ b/bochs.cfg
@@ -35,8 +35,8 @@ cpu: count=1, ips=8000000
 #text_snapshot_check: 0
 mouse: enabled=0
 private_colormap: enabled=0
-clock: sync=none, time0=local
-#clock: sync=slowdown, time0=local
+#clock: sync=none, time0=local
+clock: sync=slowdown, time0=local
 ne2k: enabled=0
 pnic: enabled=0
 # no loader
