Worked on raptor, improved a tiny thing in dump and exchanged the font in vesatext (stolen from HES ^^)

--- a/services/Makefile
+++ b/services/Makefile
@@ -1,16 +1,11 @@
 DIRS = $(filter-out $(wildcard *.*) Makefile,$(wildcard *))
-HDDMOUNT = ../disk
-SERVICES = services.txt
 
 .PHONY:  all serv clean
 
-all:	$(SERVICES)
+all:
 		@for i in $(DIRS) ; do \
 			$(MAKE) -s --no-print-directory -C $$i all || { echo "Make: Error (`pwd`)"; exit 1; } ; \
 		done;
-
-$(SERVICES):
-		../tools/disk.sh copy $(SERVICES) /etc/services
 
 clean:
 		@for i in $(DIRS) ; do \
