--- a/bochs.cfg
+++ b/bochs.cfg
@@ -20,7 +20,7 @@ ata3: enabled=0
 port_e9_hack: enabled=1
 parport1: enabled=0#1, file=""
 parport2: enabled=0
-com1: enabled=0#1, mode=null, dev=""
+com1: enabled=1, mode=file, dev="/dev/stdout"
 com2: enabled=0
 com3: enabled=0
 com4: enabled=0
