Fixed a bug in signal-handling (improved it, too) and fixed bugs in mouse and keyboard

--- a/bochs.cfg
+++ b/bochs.cfg
@@ -21,7 +21,7 @@ ata3: enabled=0
 port_e9_hack: enabled=1
 parport1: enabled=0#1, file=""
 parport2: enabled=0
-com1: enabled=1, mode=file, dev="/dev/stdout"
+com1: enabled=1, mode=file, dev="log.txt"
 com2: enabled=0
 com3: enabled=0
 com4: enabled=0
