Fixed a bug in interrupt-handling

--- a/bochs.cfg
+++ b/bochs.cfg
@@ -10,7 +10,7 @@ boot: disk
 floppya: 1_44="build/debug/disk.img", status=inserted
 # no floppyb
 ata0: enabled=1, ioaddr1=0x1f0, ioaddr2=0x3f0, irq=14
-ata0-master: type=disk, path=build/debug/hd.img, mode=flat, cylinders=40, heads=16, spt=63, translation=none
+ata0-master: type=disk, path=build/release/hd.img, mode=flat, cylinders=40, heads=16, spt=63, translation=none
 #ata0-slave: type=disk, path=build/debug/hd.img, mode=flat, cylinders=40, heads=16, spt=63, translation=none
 ata1: enabled=1, ioaddr1=0x170, ioaddr2=0x370, irq=15
 #ata1-master: type=cdrom, path=build/debug/cd.iso, status=inserted
