--- a/bochs.cfg
+++ b/bochs.cfg
@@ -15,7 +15,6 @@ ata0-master: type=disk, path=build/debug/hd.img, mode=flat, cylinders=40, heads=
 #ata0-master: type=cdrom, path=/home/hrniels/Data/Apps/damnsmalllinux/dsl-4.2.5.iso, status=inserted
 ata1: enabled=1, ioaddr1=0x170, ioaddr2=0x370, irq=15
 #ata1-master: type=cdrom, path=build/debug/cd.iso, status=inserted
-#ata1-master: type=cdrom, path=/home/hrniels/Applications/hobbyos/exclaim-0.2.1/build/i386/cdrom.iso, status=inserted
 ata2: enabled=0
 ata3: enabled=0
 port_e9_hack: enabled=1
@@ -33,13 +32,14 @@ vga_update_interval: 40000
 vga: extension=vbe
 keyboard_serial_delay: 250
 keyboard_paste_delay: 100000
-keyboard_mapping: enabled=1, map=/home/hrniels/Applications/bochs/bochs-2.4.1/gui/keymaps/x11-pc-de.map
-cpu: count=1, ips=8000000
+keyboard_mapping: enabled=1, map=/usr/local/share/bochs/keymaps/x11-pc-de.map
+cpu: count=1, ips=20000000
 #text_snapshot_check: 0
 mouse: enabled=0
 private_colormap: enabled=0
 clock: sync=none, time0=local
 #clock: sync=slowdown, time0=local
+#clock: sync=realtime, time0=local
 ne2k: enabled=0
 pnic: enabled=0
 # no loader
