Most parts of the new vmm work :)

--- a/libc/ld.conf
+++ b/libc/ld.conf
@@ -3,14 +3,13 @@ ENTRY(init)
 
 SECTIONS
 {
-	.text 0x00000000 :
+	.text 0x00001000 :
 	{
 		*(.text)
 	}
 
-	.data ALIGN (4096) :
+	.rodata ALIGN (4096) :
 	{
-		*(.data)
 		*(.rodata*)
 	}
 
@@ -18,5 +17,10 @@ SECTIONS
 	{
 		*(COMMON*)
 		*(.bss*)
+	}
+
+	.data ALIGN (4096) :
+	{
+		*(.data)
 	}
 }
