--- a/bochs.cfg
+++ b/bochs.cfg
@@ -2,7 +2,7 @@
 config_interface: textconfig
 display_library: x
 #display_library: x, options="gui_debug"
-megs: 20
+megs: 60
 romimage: file="/usr/local/share/bochs/BIOS-bochs-latest", address=0x00000
 vgaromimage: file="/usr/share/vgabios/vgabios.bin"
 #vgaromimage: file="/usr/local/share/bochs/VGABIOS-lgpl-latest.debug.bin"
@@ -54,4 +54,4 @@ pass: action=fatal
 user_shortcut: keys=none
 # no cmosimage
 #gdbstub: enabled=1, port=1234, text_base=0, data_base=0, bss_base=0
-#debug_symbols: file=build/kernel.bin
+#debug_symbols: file=build/debug/kernel.bin
