--- a/user/d/Makefile
+++ b/user/d/Makefile
@@ -4,11 +4,11 @@ DIRS = $(filter-out $(wildcard *.*) Makefile,$(wildcard *))
 
 all:
 		@for i in $(DIRS) ; do \
-			$(MAKE) -s --no-print-directory -C $$i all || { echo "Make: Error (`pwd`)"; exit 1; } ; \
+			$(MAKE) $(JOBS) -s --no-print-directory -C $$i all || { echo "Make: Error (`pwd`)"; exit 1; } ; \
 		done
 
 clean:
 		@for i in $(DIRS) ; do \
-			$(MAKE) -s --no-print-directory -C $$i clean || { echo "Make: Error (`pwd`)"; exit 1; } ; \
+			$(MAKE) $(JOBS) -s --no-print-directory -C $$i clean || { echo "Make: Error (`pwd`)"; exit 1; } ; \
 		done
 		rm -f *~
