Fixed the ld.conf's of cpp and d-apps and a bug in fs

--- a/libcpp/ld.conf
+++ b/libcpp/ld.conf
@@ -3,24 +3,33 @@ ENTRY(init)
 
 SECTIONS
 {
-	.text :
+	.text 0x00001000 :
 	{
 		*(.text)
 	}
 
-	.data ALIGN (4096) :
+	.rodata ALIGN (4096) :
 	{
-		*(.data)
-		*(.rodata)
-		. = ALIGN(4);
-		__libcpp_constr_start = .;
-		*(.ctors)
-		__libcpp_constr_end = .;
+		*(.rodata*)
 	}
 
 	.bss ALIGN (4096) :
 	{
 		*(COMMON*)
 		*(.bss*)
+	}
+
+	.data ALIGN (4096) :
+	{
+		*(.data)
+		. = ALIGN(4);
+		__libcpp_constr_start = .;
+		*(.ctors)
+		__libcpp_constr_end = .;
+	}
+
+	.text :
+	{
+		*(.text)
 	}
 }
