--- a/libd/ld.conf
+++ b/libd/ld.conf
@@ -3,28 +3,33 @@ ENTRY(init)
 
 SECTIONS
 {
-	.text :
+	.text 0x00001000 :
 	{
 		*(.text)
 	}
-	
-	.data ALIGN (4096) :
+
+	.rodata ALIGN (4096) :
+	{
+		*(.rodata*)
+	}
+
+	.bss ALIGN (4096) :
 	{
 		start_data = .;
+		*(COMMON*)
+		*(.bss*)
+	}
+
+	.data ALIGN (4096) :
+	{
 		*(.data)
-		*(.rodata)
   	. = ALIGN(4);
 		start_ctors = .; *(.ctors)   end_ctors = .;
 		start_dtors = .; *(.dtors)   end_dtors = .;
 		
 		*(.tdata .tdata.* .gnu.linkonce.td.*)
   	*(.tbss .tbss.* .gnu.linkonce.tb.*) *(.tcommon)
-	}
-
-	.bss ALIGN (4096) :
-	{
-		*(COMMON*)
-		*(.bss*)
+  	
 		end_data = .;
 	}
 }
