--- a/libc/ld.conf
+++ b/libc/ld.conf
@@ -18,9 +18,18 @@ SECTIONS
 		*(COMMON*)
 		*(.bss*)
 	}
-
+	
 	.data ALIGN (4096) :
 	{
 		*(.data)
 	}
+	
+	.tdata :
+	{
+		*(.tdata .tdata.*)
+	}
+  .tbss :
+  {
+  	*(.tbss .tbss.*) *(.tcommon)
+  }
 }
