Made cpp and d working again

--- a/libcpp/ld.conf
+++ b/libcpp/ld.conf
@@ -28,8 +28,12 @@ SECTIONS
 		__libcpp_constr_end = .;
 	}
 
-	.text :
+	.tdata :
 	{
-		*(.text)
+		*(.tdata .tdata.*)
 	}
+  .tbss :
+  {
+  	*(.tbss .tbss.*) *(.tcommon)
+  }
 }
