--- a/libd/ld.conf
+++ b/libd/ld.conf
@@ -26,10 +26,15 @@ SECTIONS
   	. = ALIGN(4);
 		start_ctors = .; *(.ctors)   end_ctors = .;
 		start_dtors = .; *(.dtors)   end_dtors = .;
-		
-		*(.tdata .tdata.* .gnu.linkonce.td.*)
-  	*(.tbss .tbss.* .gnu.linkonce.tb.*) *(.tcommon)
-  	
 		end_data = .;
 	}
+	
+	.tdata :
+	{
+		*(.tdata .tdata.*)
+	}
+  .tbss :
+  {
+  	*(.tbss .tbss.*) *(.tcommon)
+  }
 }
