Changed tls a bit so that it works in C and D

--- a/libd/ld.conf
+++ b/libd/ld.conf
@@ -31,10 +31,10 @@ SECTIONS
 	
 	.tdata :
 	{
-		*(.tdata .tdata.*)
+		*(.tdata .tdata.* .gnu.linkonce.td.*)
 	}
   .tbss :
   {
-  	*(.tbss .tbss.*) *(.tcommon)
+  	*(.tbss .tbss.* .gnu.linkonce.tb.*) *(.tcommon)
   }
 }
