--- a/user/d/.project
+++ b/user/d/.project
@@ -6,12 +6,18 @@
 	</projects>
 	<buildSpec>
 		<buildCommand>
-			<name>descent.core.dbuilder</name>
+			<name>mmrnmhrm.core.deebuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
+			<name>org.eclipse.dltk.core.scriptbuilder</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
 	</buildSpec>
 	<natures>
 		<nature>descent.core.dnature</nature>
+		<nature>mmrnmhrm.core.nature</nature>
 	</natures>
 </projectDescription>
