--- a/user/c/shlibtest/Makefile
+++ b/user/c/shlibtest/Makefile
@@ -9,7 +9,7 @@ SECLIB = $(BUILD)/$(SECLIBNAME)
 LIB = $(ROOT)/lib
 LIBC = $(ROOT)/libc
 LDCONF = $(LIBC)/ld.conf
-SHLDCONF = shld.conf
+SHLDCONF = $(LIBC)/shld.conf
 SUBDIRS = . $(filter-out Makefile $(wildcard *.*),$(wildcard *))
 BUILDDIRS = $(addprefix $(BUILDL)/,$(SUBDIRS))
 DEPS = $(shell find $(BUILDDIRS) -mindepth 0 -maxdepth 1 -name "*.d")
