--- a/libc/ld.conf
+++ b/libc/ld.conf
@@ -26,11 +26,13 @@ SECTIONS
 	{
 		*(COMMON*)
 		*(.bss*)
+		*(.dynbss)
 	}
 	
 	.data ALIGN (4096) :
 	{
 		*(.data)
+		*(.got.plt)
 	}
 	
 	.tdata :
