Now the shlib-text is shared, too and the drivers (except ata, fs and cmos) use the shared libc as well. But there are still some bugs (at least I guess that the bugs are in the dynamic-linking-system)

--- a/drivers/vesa/Makefile
+++ b/drivers/vesa/Makefile
@@ -2,4 +2,4 @@ NAME=vesa
 ADDLIBS = $(BUILD)/user_libs_vbe.a
 ADDFLAGS = -I../../user/libs
 
--include ../DefMakefile.mk
+-include ../ShlibMakefile.mk
