--- a/drivers/vterm/Makefile
+++ b/drivers/vterm/Makefile
@@ -2,4 +2,4 @@ NAME=vterm
 ADDLIBS = $(BUILD)/user_libs_vterm.a
 ADDFLAGS = -I../../user/libs
 
--include ../DefMakefile.mk
+-include ../ShlibMakefile.mk
