The c++-library is shared now :)

--- a/libcpp/Makefile
+++ b/libcpp/Makefile
@@ -1,17 +1,19 @@
 BUILDL = $(BUILD)/libcpp
 LIBDIR = ../lib
 LIBCDIR = ../libc
-SUBDIRS = src src/esc src/esc/gui
+SUBDIRS = $(filter-out $(shell find src -name "*.*"),$(shell find src -name "*"))
 BUILDDIRS = $(addprefix $(BUILDL)/,$(SUBDIRS))
 DEPS = $(shell find $(BUILDDIRS) -name "*.d")
-LIB = $(BUILD)/libcpp.a
+DYNLIBNAME = libcpp.so
+DYNLIB = $(BUILD)/$(DYNLIBNAME)
+SHLDCONF = shld.conf
 
 CC = g++
 CFLAGS = -nostdlib -nostartfiles -nodefaultlibs $(CPPDEFFLAGS) -Iinclude -I$(LIBDIR)/h \
 	-I$(LIBCDIR)/include
 
 # sources
-CSRC = $(shell find $(SUBDIRS) -name "*.cpp")
+CSRC = $(shell find src -name "*.cpp")
 START = startup.s
 
 # objects
@@ -22,16 +24,20 @@ GCCLIB = $(GCCLIBDIR)/_divdi3.object \
 	$(GCCLIBDIR)/_moddi3.object \
 	$(GCCLIBDIR)/_udivdi3.object \
 	$(GCCLIBDIR)/_umoddi3.object
-LIBCOBJS = $(shell find $(BUILD)/libc -name "*.o") $(GCCLIB)
+LIBCOBJS = $(shell find $(BUILD)/libc -name "*_pic.o") \
+	$(shell find $(BUILD)/libc -name "*_pic.s.o") \
+	$(GCCLIB)
 STARTO = $(BUILD)/libcpp_startup.o
 
 .PHONY:		all clean
 
-all: $(LIB)
+all: $(DYNLIB) $(STARTO)
 
-$(LIB): $(BUILDDIRS) $(COBJS) $(STARTO) $(LIBCOBJS)
-		@echo "	" AR $(LIB)
-		@ar rcs $(LIB) $(LIBCOBJS) $(COBJS)
+$(DYNLIB): $(BUILDDIRS) $(COBJS) $(LIBCOBJS)
+		@echo "	" LINKING $(DYNLIB)
+		@$(CC) $(CFLAGS) -shared -Wl,--build-id=none -Wl,-T,$(SHLDCONF) -Wl,-soname,$(DYNLIBNAME) \
+			-o $(DYNLIB) $(LIBCOBJS) $(COBJS);
+		../tools/disk.sh copy $(DYNLIB) /lib/$(DYNLIBNAME)
 		
 $(BUILDDIRS):
 		@for i in $(BUILDDIRS); do \
@@ -40,14 +46,14 @@ $(BUILDDIRS):
 
 $(BUILDL)/%.o: %.cpp
 		@echo "	" CC $<
-		@$(CC) $(CFLAGS) -o $@ -c $< -MMD
+		@$(CC) $(CFLAGS) -fPIC -o $@ -c $< -MMD
 
 $(STARTO): $(START)
 		@echo "	" AS $(START)
-		@nasm $(ASMFLAGS) -o $(STARTO) $(START)
+		@nasm $(ASMFLAGS) -D SHAREDLIB -o $(STARTO) $(START)
 
 -include $(DEPS)
 
 clean:
 		@echo "===== REMOVING FILES =====";
-		rm -f $(COBJS) $(LIB) $(DEPS) $(STARTO)
+		rm -f $(COBJS) $(DYNLIB) $(DEPS) $(STARTO)
