The first few 'classes' in libesc are implemented and work fine :) Exceptions work, too. But there are a few things that aren't possible yet. Dunno if I will or can change that...

--- a/libc/Makefile
+++ b/libc/Makefile
@@ -85,4 +85,5 @@ $(STARTO): $(START)
 
 clean:
 		@echo "===== REMOVING FILES =====";
-		rm -f $(COBJS) $(CPICOBJS) $(AOBJS) $(APICOBJS) $(LOBJ) $(LPICOBJ) $(STLIB) $(DEPS) $(STARTO)
+		rm -f $(COBJS) $(CPICOBJS) $(AOBJS) $(APICOBJS) $(LOBJ) $(LPICOBJ) $(STLIB) \
+			$(DEPS) $(STARTO) $(DYNLIB)
