--- a/user/c/ls/Makefile
+++ b/user/c/ls/Makefile
@@ -1,3 +1,9 @@
 NAME=ls
+ifeq ($(LINKTYPE),static)
+ADDFLAGS=-I../../../libesc/include
+ADDLIBS=$(BUILD)/libesc.a
+else
+ADDFLAGS=-lesc -I../../../libesc/include
+endif
 
 -include ../DefMakefile.mk
