--- a/lib/d/ld.conf
+++ b/lib/d/ld.conf
@@ -24,7 +24,11 @@ SECTIONS
 	{
 		*(.data)
   	. = ALIGN(4);
-		start_ctors = .; *(.ctors)   end_ctors = .;
+		__libcpp_constr_start = .;
+		start_ctors = .;
+		*(.ctors)
+		end_ctors = .;
+		__libcpp_constr_end = .;
 		start_dtors = .; *(.dtors)   end_dtors = .;
 		end_data = .;
 	}
